--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">Yo Elijo Py</string>
+    <string name="app_name">Yo Voto Py</string>
     <string name="action_settings">Settings</string>
 
+    <string name="gps_places_api_key">***REMOVED***</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_consulta_padron">Datos del padrón electoral</string>
@@ -94,4 +95,18 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+
+    <string name="spinner_prompt_denuncias">"Elige una o más categorías </string>
+    <string-array name="categories">
+        <item>Accesibilidad</item>
+        <item>Bienes Públicos</item>
+        <item>Espacio Público</item>
+        <item>Mesas</item>
+        <item>Votación</item>
+        <item>Otros</item>
+    </string-array>
+
+    <!-- Errors -->
+    <string name="error_input_required">Este campo es requerido para enviar la denuncia</string>
+    <string name="error_input_length">Se ha superado la cantidad máxima de caracteres</string>
 </resources>
