Detalle de candidato. Más bug fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,6 @@
     <!-- Errors -->
     <string name="error_input_required">Este campo es requerido para enviar la denuncia</string>
     <string name="error_input_length">Se ha superado la cantidad máxima de caracteres</string>
-    <string name="title_activity_explorar_list">ExplorarListActivity</string>
+    <string name="title_activity_explorar_list">Explorar</string>
+    <string name="title_activity_detalle_candidato">Detalle de Candidato</string>
 </resources>
