Agregados cards de local de votación, datos de votación, y candidatos a intendente de distrito en el home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,6 @@
     <string name="error_input_length">Se ha superado la cantidad máxima de caracteres</string>
     <string name="title_activity_explorar_list">Explorar</string>
     <string name="title_activity_detalle_candidato">Detalle de Candidato</string>
+
+    <string name="section_candidatos">Candidatos a Intendente para %1$s</string>
 </resources>
