--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
 
     <!-- Errors -->
     <string name="error_input_required">Este campo es requerido para enviar la denuncia</string>
+    <string name="error_input_min_length">Ingrese al menos 3 caracteres para este campo</string>
     <string name="error_input_length">Se ha superado la cantidad máxima de caracteres</string>
     <string name="title_activity_explorar_list">Explorar</string>
     <string name="title_activity_detalle_candidato">Detalle de Candidato</string>
